# rust-kernel

./: .gitignore  Authors.md  Cargo.toml  README.md  qs  x86_64-rust-kernel.json  x86_64-rust_kernel.json
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  slab_allocator.rs  vga_buffer.rs
src/fs/: disk.rs  fat32.rs  mod.rs
src/memory/: frame_allocator.rs  mod.rs
src/task/: context.rs  mod.rs  scheduler.rs
tests/: basic_boot.rs  fs_tests.rs  heap_allocation.rs  memory_tests.rs
